--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!doctype html>
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyC-wyBbgYsH1u1ipwIuZ_gJKatelBymODQ",
+  authDomain: "overgrowth-a6322.firebaseapp.com",
+  projectId: "overgrowth-a6322",
+  storageBucket: "overgrowth-a6322.firebasestorage.app",
+  messagingSenderId: "306160132304",
+  appId: "1:306160132304:web:43d8569a628505f3d2bed5",
+  measurementId: "G-2HS9JFJ282"
+};
+
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
@@ -886,3 +897,4 @@
 </script>
 </body>
 </html>
+
