--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Overgrowth - Human-Like AI</title>
+<title>Overgrowth - Full Game</title>
 <style>
 body { margin:0; font-family:'Segoe UI',sans-serif; background:#e8f5e9; display:flex; justify-content:center; align-items:center; min-height:100vh; overflow-x:hidden;}
 #loadingScreen { position:absolute; width:100%; height:100%; background:url('https://i.imgur.com/1rYv7jk.png') center/cover no-repeat; display:flex; justify-content:center; align-items:center; font-size:3em; color:white; text-shadow:2px 2px 6px black; z-index:10; }
@@ -25,7 +25,7 @@ body { margin:0; font-family:'Segoe UI',sans-serif; background:#e8f5e9; display:
 @keyframes pop { 0% {opacity:1; transform:translateY(0);} 100% {opacity:0; transform:translateY(-30px);} }
 button { margin:10px; padding:10px 20px; font-size:16px; border-radius:5px; border:none; background:#4caf50; color:white; cursor:pointer; }
 button:hover { background:#45a049; }
-#garden { display:flex; flex-wrap:wrap; justify-content:center; }
+#garden { display:flex; flex-wrap:wrap; justify-content:center; margin-top:10px; }
 #combatLog { max-height:200px; overflow-y:auto; width:90%; background:#fff; padding:10px; margin-top:10px; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.2); font-size:14px; }
 .glow { animation:glow 0.6s ease-in-out; }
 @keyframes glow { 0%{box-shadow:0 0 0px yellow;} 50%{box-shadow:0 0 15px yellow;} 100%{box-shadow:0 0 0px yellow;} }
@@ -62,13 +62,18 @@ setTimeout(() => {
     initGame();
 }, 6000);
 
+// Type and Advantage
 const types=['Sun','Water','Thorn','Fungal','Normal','Nocturnal'];
 const typeAdvantage={'Nocturnal':'Fungal','Fungal':'Normal','Normal':'Thorn','Thorn':'Water','Water':'Sun','Sun':'Nocturnal'};
+
+// Game Variables
 let gardenDeck=[], playerDeck=[], aiDeck=[], combatLog=[];
 let playerFormation={}, aiFormation={};
 
+// Logging
 function log(msg){ combatLog.push(msg); const logEl=document.getElementById('combatLog'); logEl.innerHTML=combatLog.join('<br>'); logEl.scrollTop=logEl.scrollHeight; }
 
+// Create a generic card
 function createCard(name){
     const type=types[Math.floor(Math.random()*types.length)];
     const hp=Math.floor(Math.random()*20)+10;
@@ -86,18 +91,22 @@ function createCard(name){
     };
 }
 
+// Initialize Game
 function initGame(){
     const garden=document.getElementById('garden'); garden.innerHTML='';
     const cardNames=['Rose','Cactus','Mushroom','Sunflower','Nightshade','Fern','Lily','Ivy','Daisy','Orchid','Bamboo','Tulip'];
     gardenDeck=cardNames.map(name=>createCard(name));
+    // Drafting Phase 1
     gardenDeck.slice(0,6).forEach(card=>{
         const el=createCardElement(card);
         el.onclick=()=>{ if(playerDeck.length<3){playerDeck.push(card); garden.removeChild(el);} };
         garden.appendChild(el);
     });
+    // AI drafts 3 cards avoiding overlap
     aiDeck=aiDraft(3,gardenDeck.slice(6));
 }
 
+// AI Drafting Logic
 function aiDraft(n,cards){
     let selected=[];
     while(selected.length<n){
@@ -107,6 +116,7 @@ function aiDraft(n,cards){
     return selected;
 }
 
+// Create Card Element
 function createCardElement(card){
     const el=document.createElement('div'); el.classList.add('card');
     el.innerHTML=`<div class="name">${card.name}</div>
@@ -117,11 +127,13 @@ function createCardElement(card){
     return el;
 }
 
+// Start Combat
 document.getElementById('startCombat').onclick=()=>{
     if(playerDeck.length!==3){alert('Pick 3 cards'); return;}
     setupCombat();
-};
+}
 
+// Setup Combat Phase
 function setupCombat(){
     playerFormation.primary=playerDeck[0];
     playerFormation.secondary=playerDeck[1];
@@ -136,6 +148,7 @@ function setupCombat(){
     setTimeout(combatTurn,1000);
 }
 
+// Update Board
 function updateBoard(){
     function render(containerId, formation){
         const container=document.getElementById(containerId); container.innerHTML='';
@@ -148,43 +161,36 @@ function updateBoard(){
     render('aiSupport',aiFormation); render('aiBench',aiFormation);
 }
 
+// Show Damage/Healing
 function showDamage(card,amount){
     const dmg=document.createElement('div'); dmg.classList.add('damagePop'); dmg.textContent=amount;
-    document.body.appendChild(dmg);
-    setTimeout(()=>{document.body.removeChild(dmg);},800);
+    document.body.appendChild(dmg); setTimeout(()=>{document.body.removeChild(dmg);},800);
 }
-
 function showHeal(card,amount){
     const heal=document.createElement('div'); heal.classList.add('healPop'); heal.textContent=amount;
-    document.body.appendChild(heal);
-    setTimeout(()=>{document.body.removeChild(heal);},800);
+    document.body.appendChild(heal); setTimeout(()=>{document.body.removeChild(heal);},800);
 }
 
+// Combat Turn
 function combatTurn(){
     if(!playerFormation.primary||!aiFormation.primary){ checkVictory(); return;}
     playerTurn();
     setTimeout(()=>{ if(!checkVictory()){ aiTurn(); if(!checkVictory()) setTimeout(combatTurn,1000); } },1000);
 }
 
-function playerTurn(){
-    turn(playerFormation,aiFormation,true);
-}
+function playerTurn(){ turn(playerFormation,aiFormation,true); }
+function aiTurn(){ turn(aiFormation,playerFormation,false,true); }
 
-function aiTurn(){
-    // AI decides best attack target and ability
-    turn(aiFormation,playerFormation,false,true);
-}
-
+// Turn Logic
 function turn(attackerTeam,defenderTeam,isPlayer,ai=false){
     ['primary','secondary','support'].forEach(pos=>{
         let attacker=attackerTeam[pos];
         if(attacker && !attacker.exhausted){
-            // AI logic: heal if low HP
+            // AI healing logic
             if(ai && attacker.hp<attacker.maxHp/2 && attacker.energy>=1){
                 attacker.active(attacker,Object.values(attackerTeam),Object.values(defenderTeam));
             } else if(attacker.energy>=1 && defenderTeam.primary){
                 let defender=defenderTeam.primary;
-                // AI prioritizes weakest target
                 if(ai){
                     let targets=[defenderTeam.primary,defenderTeam.secondary,defenderTeam.support].filter(c=>c);
                     defender=targets.reduce((a,b)=>a.hp<b.hp?a:b);
@@ -204,12 +210,14 @@ function turn(attackerTeam,defenderTeam,isPlayer,ai=false){
     updateBoard();
 }
 
+// Shift Formation When Plant Dies
 function shiftFormation(team){
     team.primary=team.secondary;
     team.secondary=team.support;
     team.support=team.bench.shift()||null;
 }
 
+// Victory Check
 function checkVictory(){
     if(!playerFormation.primary){ alert('AI Wins!'); log('AI Wins!'); return true;}
     if(!aiFormation.primary){ alert('You Win!'); log('You Win!'); return true;}
