--- a/index.html
+++ b/index.html
@@ -1,1 +1,219 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Overgrowth</title>
+<style>
+body { margin:0; font-family:'Segoe UI',sans-serif; background:#e8f5e9; display:flex; justify-content:center; align-items:center; min-height:100vh; overflow-x:hidden;}
+#loadingScreen { position:absolute; width:100%; height:100%; background:url('https://i.imgur.com/1rYv7jk.png') center/cover no-repeat; display:flex; flex-direction:column; justify-content:center; align-items:center; color:white; text-shadow:2px 2px 6px black; font-size:2em; z-index:10;}
+#progressBar { width:80%; height:20px; background:#ddd; border-radius:10px; margin-top:20px; overflow:hidden;}
+#progressFill { width:0%; height:100%; background:#4caf50;}
+#gameContainer { display:none; flex-direction:column; align-items:center; width:100%; max-width:1200px; }
+.board { display:flex; justify-content:space-between; width:100%; margin-top:20px; }
+.playerBoard { display:flex; flex-direction:column; align-items:center; }
+.cardsRow { display:flex; margin:5px 0; }
+.card { width:120px; height:180px; background:white; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.3); margin:5px; position:relative; display:flex; flex-direction:column; justify-content:space-between; padding:5px; font-size:12px; cursor:pointer; transition:transform 0.3s; }
+.card:hover { transform: scale(1.05); }
+.card .name { font-weight:bold; text-align:center; }
+.card .stats { display:flex; justify-content:space-between; font-size:11px; }
+.card .hpBar { height:10px; width:100%; background:#ddd; border-radius:5px; overflow:hidden; position:relative; }
+.card .hpFill { height:100%; background:#f44336; transition:width 0.5s; }
+.card .energyBar { height:6px; width:100%; background:#ddd; border-radius:3px; overflow:hidden; margin-top:2px; }
+.card .energyFill { height:100%; background:#ffeb3b; transition:width 0.5s; }
+.card .status { position:absolute; bottom:5px; left:5px; font-size:10px; color:#333; }
+.highlight { box-shadow:0 0 15px yellow;}
+#actions { margin-top:10px; display:flex; flex-wrap:wrap; justify-content:center; }
+button { margin:5px; padding:8px 15px; font-size:14px; border-radius:5px; border:none; background:#4caf50; color:white; cursor:pointer; }
+button:hover { background:#45a049; }
+#combatLog { max-height:200px; overflow-y:auto; width:90%; background:#fff; padding:10px; margin-top:10px; border-radius:8px; box-shadow:0 0 10px rgba(0,0,0,0.2); font-size:14px; }
+.damagePop { position:absolute; color:red; font-weight:bold; animation:pop 0.8s ease-out forwards; }
+.healPop { position:absolute; color:green; font-weight:bold; animation:pop 0.8s ease-out forwards; }
+@keyframes pop { 0% {opacity:1; transform:translateY(0);} 100% {opacity:0; transform:translateY(-30px);} }
+</style>
+</head>
+<body>
+<div id="loadingScreen">
+  <div>Loading Overgrowth...</div>
+  <div id="progressBar"><div id="progressFill"></div></div>
+</div>
+<div id="gameContainer">
+<h1>Overgrowth</h1>
+<div id="garden"></div>
+<button id="finishDraft">Finish Draft</button>
+<div class="board">
+<div class="playerBoard" id="playerBoard">
+<h2>You</h2>
+<div class="cardsRow" id="playerActive"></div>
+<div class="cardsRow" id="playerBench"></div>
+</div>
+<div class="playerBoard" id="aiBoard">
+<h2>AI</h2>
+<div class="cardsRow" id="aiActive"></div>
+<div class="cardsRow" id="aiBench"></div>
+</div>
+</div>
+<div id="actions"></div>
+<div id="combatLog"></div>
+</div>
+<script>
+// Loading
+let progress=0;
+let loadInterval=setInterval(()=>{
+  progress+=1.66;
+  document.getElementById('progressFill').style.width=progress+'%';
+  if(progress>=100){ clearInterval(loadInterval); document.getElementById('loadingScreen').style.display='none'; document.getElementById('gameContainer').style.display='flex'; initGame(); }
+},100);
+
+// Types and advantage
+const types=['Sun','Water','Thorn','Fungal','Normal','Nocturnal'];
+const typeAdvantage={'Nocturnal':'Fungal','Fungal':'Normal','Normal':'Thorn','Thorn':'Water','Water':'Sun','Sun':'Nocturnal'};
+
+// Game variables
+let gardenDeck=[], playerDeck=[], aiDeck=[], combatLog=[];
+let playerFormation={}, aiFormation={}, currentPlayer=null;
+
+// Logging
+function log(msg){ combatLog.push(msg); const logEl=document.getElementById('combatLog'); logEl.innerHTML=combatLog.join('<br>'); logEl.scrollTop=logEl.scrollHeight; }
+
+// Create card
+function createCard(name){
+    const type=types[Math.floor(Math.random()*types.length)];
+    const hp=Math.floor(Math.random()*20)+10;
+    const atk=Math.floor(Math.random()*10)+5;
+    const energy=Math.floor(Math.random()*3)+1;
+    return {
+        name,type,hp,maxHp:hp,atk,baseAtk:atk,energy,maxEnergy:energy,exhausted:false,statuses:[],
+        passive:function(self,ally,enemy){},
+        active:function(self,ally,enemy){
+            if(self.energy>=1){
+                let target=ally.find(c=>c&&c.hp<c.maxHp);
+                if(target){ target.hp=Math.min(target.maxHp,target.hp+5); self.energy-=1; showHeal(target,'+5'); log(`${self.name} heals ${target.name} 5 HP.`);}
+            }
+        }
+    };
+}
+
+// Initialize drafting
+function initGame(){
+    const garden=document.getElementById('garden'); garden.innerHTML='';
+    const cardNames=['Rose','Cactus','Mushroom','Sunflower','Nightshade','Fern','Lily','Ivy','Daisy','Orchid','Bamboo','Tulip'];
+    gardenDeck=cardNames.map(name=>createCard(name));
+    gardenDeck.forEach(card=>{
+        const el=createCardElement(card,false); // hide type/atk/hp
+        el.onclick=()=>{ if(playerDeck.length<3){ playerDeck.push(card); el.classList.add('highlight'); }};
+        garden.appendChild(el);
+    });
+    aiDeck=aiDraft(3,gardenDeck);
+}
+
+// AI draft
+function aiDraft(n,cards){ let selected=[]; while(selected.length<n){ let best=cards[Math.floor(Math.random()*cards.length)]; if(!selected.includes(best)) selected.push(best);} return selected; }
+
+// Card element
+function createCardElement(card,showStats=true){
+    const el=document.createElement('div'); el.classList.add('card');
+    el.innerHTML=`<div class="name">${card.name}</div>
+    <div class="stats">${showStats?`${card.type} ATK:${card.atk}`:''}</div>
+    <div class="hpBar"><div class="hpFill" style="width:${(card.hp/card.maxHp)*100}%"></div></div>
+    <div class="energyBar"><div class="energyFill" style="width:${(card.energy/card.maxEnergy)*100}%"></div></div>
+    <div class="status">${card.statuses.join(', ')}</div>`;
+    return el;
+}
+
+// Finish draft
+document.getElementById('finishDraft').onclick=()=>{
+    if(playerDeck.length!==3){alert('Pick 3 cards'); return;}
+    document.getElementById('garden').style.display='none';
+    document.getElementById('finishDraft').style.display='none';
+    startCombat();
+}
+
+// Setup combat
+function startCombat(){
+    playerFormation.active=playerDeck; playerFormation.bench=[];
+    aiFormation.active=aiDeck; aiFormation.bench=[];
+    log("Combat begins!");
+    currentPlayer='player';
+    updateBoard();
+    promptPlayerAction();
+}
+
+// Update board
+function updateBoard(){
+    function render(containerId,cards){
+        const container=document.getElementById(containerId); container.innerHTML='';
+        cards.forEach(c=>container.appendChild(createCardElement(c)));
+    }
+    render('playerActive',playerFormation.active);
+    render('aiActive',aiFormation.active);
+}
+
+// Show damage/heal
+function showDamage(card,amount){ const dmg=document.createElement('div'); dmg.classList.add('damagePop'); dmg.textContent=amount; document.body.appendChild(dmg); setTimeout(()=>document.body.removeChild(dmg),800);}
+function showHeal(card,amount){ const heal=document.createElement('div'); heal.classList.add('healPop'); heal.textContent=amount; document.body.appendChild(heal); setTimeout(()=>document.body.removeChild(heal),800);}
+
+// Player action
+function promptPlayerAction(){
+    if(playerFormation.active.length===0||aiFormation.active.length===0){ checkVictory(); return;}
+    const actionsDiv=document.getElementById('actions'); actionsDiv.innerHTML='';
+    playerFormation.active.forEach((card,i)=>{
+        if(card.exhausted) return;
+        const btn=document.createElement('button'); btn.textContent=`Use ${card.name}`; btn.onclick=()=>{ chooseCardAction(card); };
+        actionsDiv.appendChild(btn);
+    });
+}
+
+// Choose card action
+function chooseCardAction(card){
+    const actionsDiv=document.getElementById('actions'); actionsDiv.innerHTML='';
+    const attackBtn=document.createElement('button'); attackBtn.textContent='Attack'; attackBtn.onclick=()=>{
+        chooseTarget(card);
+    };
+    const abilityBtn=document.createElement('button'); abilityBtn.textContent='Use Ability'; abilityBtn.onclick=()=>{
+        card.active(card,playerFormation.active,aiFormation.active);
+        card.energy--; if(card.energy<=0){ card.exhausted=true; card.energy=0;}
+        updateBoard(); setTimeout(aiTurn,500);
+    };
+    const passBtn=document.createElement('button'); passBtn.textContent='Pass'; passBtn.onclick=()=>{ card.exhausted=true; setTimeout(aiTurn,500); }
+    actionsDiv.appendChild(attackBtn); actionsDiv.appendChild(abilityBtn); actionsDiv.appendChild(passBtn);
+}
+
+// Choose target for attack
+function chooseTarget(attacker){
+    const actionsDiv=document.getElementById('actions'); actionsDiv.innerHTML='Select a target:';
+    aiFormation.active.forEach(target=>{
+        const btn=document.createElement('button'); btn.textContent=target.name; btn.onclick=()=>{
+            let dmg=attacker.atk; if(typeAdvantage[attacker.type]===target.type) dmg+=10;
+            target.hp-=dmg; showDamage(target,dmg); log(`${attacker.name} attacks ${target.name} for ${dmg}`);
+            if(target.hp<=0){ aiFormation.active=aiFormation.active.filter(c=>c!==target); log(`${target.name} defeated!`);}
+            attacker.energy--; if(attacker.energy<=0){ attacker.exhausted=true; attacker.energy=0;}
+            updateBoard(); setTimeout(aiTurn,500);
+        };
+        actionsDiv.appendChild(btn);
+    });
+}
+
+// AI turn
+function aiTurn(){
+    if(aiFormation.active.length===0||playerFormation.active.length===0){ checkVictory(); return;}
+    let card=aiFormation.active.find(c=>!c.exhausted);
+    if(!card){ playerFormation.active.forEach(c=>c.exhausted=false); aiFormation.active.forEach(c=>c.exhausted=false); promptPlayerAction(); return;}
+    // Simple AI: attack weakest
+    let target=playerFormation.active.reduce((a,b)=>(b.hp<a.hp?b:a),playerFormation.active[0]);
+    let dmg=card.atk; if(typeAdvantage[card.type]===target.type) dmg+=10;
+    target.hp-=dmg; showDamage(target,dmg); log(`AI's ${card.name} attacks ${target.name} for ${dmg}`);
+    if(target.hp<=0){ playerFormation.active=playerFormation.active.filter(c=>c!==target); log(`${target.name} defeated!`);}
+    card.energy--; if(card.energy<=0){ card.exhausted=true; card.energy=0;}
+    updateBoard(); setTimeout(promptPlayerAction,500);
+}
+
+// Victory check
+function checkVictory(){
+    if(playerFormation.active.length===0){ alert('AI Wins!'); log('AI Wins!'); return true;}
+    if(aiFormation.active.length===0){ alert('You Win!'); log('You Win!'); return true;}
+}
+</script>
+</body>
+</html>
